objects/Drug_Usage__c.object
<CustomObject>
    <fields>
        <fullName>Clinical_Trial_Profile__c</fullName>
        <label>Clinical Trial Profile</label>
        <referenceTo>Clinical_Trial_Profile__c</referenceTo>
        <relationshipLabel>Drug Usage</relationshipLabel>
        <relationshipName>Drug_Usage</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Concomitant_Therapies__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Medication and Treatment that the patient is currently on</inlineHelpText>
        <label>Concomitant Therapies</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dose__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Dose</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>First Patient In to Last Patient Out</inlineHelpText>
        <label>Duration</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fill_Data__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Pharmacy Prescription Fill Data</inlineHelpText>
        <label>Fill Data</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Intervention_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Intervention Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Key__c</fullName>
        <description>STUDY_ID + INTERVENTION_TYPE + INTERVENTION_NAME</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Primary Key (External Use)</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Drug Usage</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Drug Usage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Drug Usage</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>